# morph

./: .dockerignore  .gitignore  .gitmodules  .prettierrc.json  .solhint.json  Dockerfile.l2-node  LICENSE  Makefile  MakefileEc2.mk  MakefileEks.mk  README.md  go.mod  go.sum  go.work  go.work.sum  package-lock.json
gas-oracle/app/: Cargo.toml  abi.sh
gas-oracle/app/data/: blob_with_context.data  blob_with_origin_batch.data  blob_with_zstd_batch.data
gas-oracle/app/resource/abi/: Rollup.json
gas-oracle/app/src/: blob.rs  blob_client.rs  error.rs  external_sign.rs  gas_price_oracle.rs  l1_base_fee.rs  lib.rs  main.rs  metrics.rs  overhead.rs  signer.rs  typed_tx.rs
gas-oracle/app/src/abi/: GasPriceOracle.json  Rollup.json  mod.rs
gas-oracle/app/src/da_scalar/: blob.rs  blob_client.rs  calculate.rs  error.rs  l1_scalar.rs  zstd_util.rs
gas-oracle/app/src/overhead/: blob.rs  blob_client.rs  calculate.rs  error.rs  mod.rs  overhead.rs  typed_tx.rs
gas-oracle/app/src/scalar/: blob.rs  calculate.rs  error.rs  l1_scalar.rs  mod.rs
prover/: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dockerfile.challenger  Dockerfile.handler  Dockerfile.prover  Dockerfile.shadow  Dockerfile.sp1-app  Dockerfile.sp1-base  Dockerfile.sp1-compiler  Dockerfile.sp1-plonk  Dockerfile.sp1-prove  Dockerfile.sp1-test  LICENSE  Makefile  README.md  build.sh  build_test.sh  docker-compose-app.yml  docker-compose-qa.yml  download_params.sh  rust-toolchain  rustfmt.toml  start.sh  start_shadow.sh  start_with_challenger.sh  stop.sh
prover/challenge-handler/: .env.dev  Cargo.toml  Rollup.json  abi.sh  auto_challenge.sh
prover/challenge-handler/src/: challenge.rs  external_sign.rs  handler.rs  input.data  lib.rs  main.rs  metrics.rs  shadow_challenge.rs  staking.data  util.rs
prover/challenge-handler/src/abi/: AnyRollup.json  Rollup.json  ShadowRollup.json  mod.rs
prover/configs/: layer1.config
prover/contracts/: README.md
prover/contracts/script/: Evm.sol
prover/contracts/src/: PlonkVerifier.sol  SP1VerifierPlonk.sol
prover/contracts/src/fixtures/: plonk-fixture.json
prover/contracts/test/: Evm.t.sol
prover/crates/core/: Cargo.toml
prover/crates/core/src/: batch.rs  chunk.rs  database.rs  error.rs  hardfork.rs  lib.rs
prover/crates/executor/client/: Cargo.toml
prover/crates/executor/core/: Cargo.toml
prover/crates/executor/host/: Cargo.toml
prover/crates/morph-executor/: Cargo.toml
prover/crates/morph-executor/client/: Cargo.toml
prover/crates/morph-executor/src/: lib.rs
prover/crates/mpt/: Cargo.toml
prover/crates/primitives/: Cargo.toml
prover/crates/sbv/: Cargo.toml
prover/crates/storage/: Cargo.toml
prover/crates/utils/: Cargo.toml
prover/l2-sequencer/: Makefile  README.md
prover/l2-sequencer/devnet/: .env.dev  docker-compose.yml  genesis_geth.json  nodekey0
prover/l2-sequencer/geth/: Dockerfile  genesis.json
prover/l2-sequencer/traces/: holesky_traces.json  qanet_traces.json
prover/l2geth/: Dockerfile
prover/l2geth/devnet/: docker-compose.yml  genesis_geth.json
prover/script/: execute.sh  prover_server.sh  stop.sh
prover/shadow-proving/: .env.dev  Cargo.toml  README.md  prove.json  stop.sh
prover/shadow-proving/bytecode/: ShadowRollup.json
prover/shadow-proving/contract/: .env.dev  .gitignore  deploy-config.json  hardhat.config.js  package-lock.json  package.json
prover/shadow-proving/contracts/: ShadowRollup.sol
prover/shadow-proving/scripts/: deploy.js  prove.js
prover/shadow-proving/shadow-rollup/: deploy-config.json  prove.json
prover/shadow-proving/shadow-rollup-contract/: .gitignore  compile_and_export.sh  deploy.sh
prover/shadow-proving/src/: batch.json  challenge.rs  handler.rs  input.data  lib.rs  main.rs  metrics.rs  shadow_challenge.rs  shadow_handler.rs  shadow_prove.rs  shadow_rollup.rs  util.rs
prover/src/: lib.rs  prover.rs  utils.rs
prover/testdata/: dev.json  devnet_small_batch_traces.json  mainnet_batch_traces.json  mainnet_batch_traces_l1.json  mainnet_batch_traces_test.json  qanet_traces.json  verify.sh
prover/testdata/altfeetx/: block_traces_329475_329475.json  block_traces_329791_329791.json  block_traces_341111_341111.json  block_traces_641806_641806.json  trace.json  trace1.json  trace2.json  trace_call.json  trace_create.json  trace_failed.json  trace_slot.json  trace_slot_another.json
prover/testdata/blob/: blob_with_zstd_batch.data  blob_with_zstd_batch_holesky.data  mainnet_47561.data  sp1_batch.data
prover/testdata/morph203/: morph203_0_traces.json  morph203_1_traces.json  morph203_2_traces.json  morph203_3_traces.json
prover/testdata/mpt/: executor_input_19720290.data  executor_input_19720290.json  hostexecutoroutput  local_transfer_eth.json  mainnet_1430.json  mainnet_16283373.data  mainnet_16283373.json  mainnet_165256.data  mainnet_165256.json  mainnet_18762206.json  mainnet_19137902.json  mainnet_19137909.json  mainnet_19266117.json  mainnet_19720219.json  mainnet_19720290.data  mainnet_209.json  mainnet_25215.json  mainnet_809.json  mainnet_898.json  mainnnet_19137902.json  not_expected_zktrie.json
prover/testdata/state/: block_1.data  block_16283373.data  block_18762148.data  block_18762206.data  block_18888356.data  block_19266117.data  block_19716579.data  block_19717253.data  block_19720219.data  block_19720290.data  block_19720340.data  block_19720357.data  block_19720482.data  block_19720573.data  block_19720587.data  block_19720595.data  block_19720607.data  block_19720619.data  block_19720627.data  block_19720631.data  block_19720667.data  block_19847189.data  block_19954360.data  block_20067413.data  block_20219114.data  block_20293417.data  block_20322002.data  block_20322304.data  block_21320347.data  block_2662438.data  block_475.data
prover/testdata/viridian/: eip7702_traces.json  test_traces.json  test_traces1.json
prover/tests/: gen_tx_trace.rs
prover/tests/abi/: TestZkEVM.json
prover/tests/local-test/: engine-make-block-loop.sh  engine-make-block.sh  genesis-mpt.json  genesis.json  jwt-secret.txt  local_geth.sh  send-tx.go  send-tx.sh  start-mpt-node.sh
(+1599 files in other folders)
