[workspace]
members = [
    "bin/host",
    "bin/client",
    "bin/server",
    "crates/morph-executor/host",
    "crates/morph-executor/client",
    "crates/morph-executor/core",
    "crates/morph-executor/utils",
    "crates/primitives",
    "crates/utils",
    "tests/*/*",
    "crates/storage",
]
exclude = ["bin/shadow-prove", "bin/challenge"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"
repository = "https://github.com/morph-l2/morph/tree/main/prover"

[workspace.dependencies]
hex = "0.4"
once_cell = "1.19"
thiserror = "1.0"
tiny-keccak = "2.0"
getrandom = { version = "*", features = ["custom"] } # just for disable
log = "0.4"
prometheus = { version = "0.9", features = ["process"] }
zstd = { git = "https://github.com/scroll-tech/zstd-rs", branch = "hack/mul-block", features = [
    "experimental",
] }
ruzstd = { git = "https://github.com/KillingSpark/zstd-rs.git", branch = "master" }

# crypto
kzg-rs = { git = "https://github.com/morph-l2/kzg-rs.git", branch = "sp1-bls-dev" }
c-kzg = "2.1.5"

sha2 = "0.10.8"
# binary dependencies
anyhow = "1.0"
async-channel = "2.2"
clap = "4"
env_logger = "0.9"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.9"
tokio = { version = "1", default-features = false }
url = "2.5"
eyre = "0.6"
axum = "0.4.3"
# tower = { version = "0.4", features = ["full"] }
# tower-http = { version = "0.4", features = ["full"] }
dotenv = "0.15.0"
flexi_logger = "0.29"

# optional dependencies
csv = "1.3"
ctor = "0.2"
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
prometheus-client = "0.22"
# pprof = { version = "0.13", features = ["flamegraph"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cfg-if = "1.0.0"

# dev dependencies
rand = "0.8"
reqwest = "0.12"

# workspace
morph-executor-host = { path = "crates/morph-executor/host" }
morph-executor-client = { path = "crates/morph-executor/client" }
morph-executor-utils = { path = "crates/morph-executor/utils" }
morph-executor-core = { path = "crates/morph-executor/core" }
prover-storage = { path = "crates/storage" }
morph-prove = { path = "bin/host" }
prover-primitives = { path = "crates/primitives" }
prover-utils = { path = "crates/utils" }

# sp1
sp1-build = "5.1.0"
sp1-core-executor = { version = "5.1.0", features = ["bigint-rug"] }
sp1-prover = "5.1.0"
sp1-sdk = { version = "5.1.0", features = ["native-gnark"] }
sp1-zkvm = { version = "5.1.0" }

reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", default-features = false }

revm = { version = "31.0.1", features = [
    "serde",
    "bn",
], default-features = false }

revm-primitives = { version = "21.0.2", features = [
    "serde",
], default-features = false }


rsp-mpt = { git = "https://github.com/succinctlabs/rsp.git", branch = "main" }

# alloy
alloy = { version = "1.1.0", default-features = false }
alloy-chains = { version = "0.2.17", default-features = false }
alloy-evm = { version = "0.23.1", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "sha3-keccak",
    "map-foldhash",
] }
alloy-provider = { version = "1.1.0", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "1.1.0", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-debug = { version = "1.1.0", default-features = false }

alloy-json-rpc = { version = "1.1.0", default-features = false }
alloy-genesis = { version = "1.1.0", default-features = false, features = [
    "serde-bincode-compat",
] }
alloy-consensus = { version = "1.1.0", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-network = { version = "1.1.0", default-features = false }
alloy-transport = { version = "1.1.0", default-features = false }
alloy-transport-http = { version = "1.1.0", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "1.1.0" }
alloy-rpc-client = { version = "1.1.0", default-features = false }
alloy-eips = { version = "1.1.0", default-features = false }
alloy-serde = "1.1.0"
alloy-rlp = "0.3.10"
alloy-trie = "0.9.1"


[workspace.lints.rust]
missing-docs = "deny"
missing-debug-implementations = "deny"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0", package = "sha2" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
