[workspace]
members = [
    "bin/host",
    "bin/client",
    "bin/server",
    "bin/shadow-prove",
    "crates/executor/host",
    "crates/executor/client",
    "crates/executor/core",
    "crates/primitives",
    "crates/mpt",
    "crates/utils",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
]
exclude = ["bin/challenge"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.91.0"
authors = ["developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"
repository = "https://github.com/morph-l2/morph/tree/main/prover"

[workspace.dependencies]
# General Utilities
anyhow = "1.0"
cfg-if = "1.0.4"
clap = "4"
csv = "1.3"
ctor = "0.2"
dotenv = "0.15.0"
env_logger = "0.11.8"
flexi_logger = "0.29"
log = "0.4"
once_cell = "1.19"
thiserror = "2.0.14"
async-trait = "0.1.89"

# Serialization
serde = "1.0"
serde_json = "1.0"
serde_with = "3.9"

# Async & Networking
axum = "0.4.3"
futures = "0.3"
reqwest = "0.13"
tokio = { version = "1.51.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }

# Logging & Metrics
prometheus = { version = "0.9", features = ["process"] }
prometheus-client = "0.22"

# Compression
# zstd decompression, the pure Rust implementation used in riscv client.
ruzstd = { git = "https://github.com/KillingSpark/zstd-rs.git", branch = "master" }
# zstd compression, the C implementation used in host.
# zstd = { git = "https://github.com/morph-l2/zstd-rs.git", branch = "zstd-dev", features = [
#     "experimental",
# ] }

zstd = "0.13.3"


# Crypto
c-kzg = "2.1.5"
kzg-rs = { git = "https://github.com/succinctlabs/kzg-rs" }
sha2 = "0.10.8"
rand = "0.8"

# EVM & Blockchain (Alloy, REVM, Reth)
alloy = { version = "2.0.4", default-features = false }
alloy-chains = { version = "0.2.33", default-features = false }
alloy-consensus = { version = "2.0.4", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-eips = { version = "2.0.4", default-features = false }
alloy-evm = "0.34.0"
alloy-genesis = { version = "2.0.4", default-features = false, features = [
    "serde-bincode-compat",
] }
alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-network = { version = "2.0.4", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = [
    "sha3-keccak",
] }
alloy-provider = { version = "2.0.4", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rlp = "0.3.13"
alloy-rpc-client = { version = "2.0.4", default-features = false }
alloy-rpc-types = { version = "2.0.4", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-debug = { version = "2.0.4", default-features = false }
alloy-serde = "2.0.4"
alloy-transport = { version = "2.0.4", default-features = false }
alloy-transport-http = { version = "2.0.4", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "2.0.4" }
alloy-trie = "0.9.5"
alloy-sol-types = { version = "1.5.6", features = ["json"] }
alloy-contract = { version = "2.0.4", default-features = false }
alloy-signer-local = { version = "2.0.4", default-features = false }
rlp = "0.5.2"
hex-literal = "0.4.1"
revm = { version = "38.0.0", features = [
    "optional_fee_charge",
    "optional_eip7623",
], default-features = false }
reth-primitives-traits = { version = "0.3.1", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
morph-revm = { git = "https://github.com/morph-l2/morph-reth.git", branch = "fix/payload-types-reth-codec-feature" }
morph-primitives = { git = "https://github.com/morph-l2/morph-reth.git", branch = "fix/payload-types-reth-codec-feature" }
morph-chainspec = { git = "https://github.com/morph-l2/morph-reth.git", branch = "fix/payload-types-reth-codec-feature" }
morph-evm = { git = "https://github.com/morph-l2/morph-reth.git", branch = "fix/payload-types-reth-codec-feature" }
morph-rpc = { git = "https://github.com/morph-l2/morph-reth.git", branch = "fix/payload-types-reth-codec-feature", default-features = false }

# ZK / SP1
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v6.2.0" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v6.2.0" }
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", tag = "v6.2.0" }

# Workspace Members
morph-prove = { path = "bin/host", default-features = false }
prover-executor-client = { path = "crates/executor/client" }
prover-executor-core = { path = "crates/executor/core" }
prover-executor-host = { path = "crates/executor/host" }
prover-primitives = { path = "crates/primitives" }
prover-storage-rpc = { path = "./crates/storage/rpc-db" }
prover-storage-witness = { path = "./crates/storage/witness-db" }
prover-mpt = { path = "crates/mpt" }
prover-utils = { path = "crates/utils" }


[workspace.lints.rust]
missing-docs = "deny"
missing-debug-implementations = "deny"

[patch.crates-io]
# Precompile patches
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-6.2.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-6.2.0" }

# Use the same local zstd implementation for transitive users (notably sp1-sdk)
# to avoid multiple libzstd C implementations with different experimental
# parameter numbers being linked into the same binary.
# zstd = { git = "https://github.com/morph-l2/zstd-rs.git", branch = "zstd-dev" }
