[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["optimism"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
axum = "0.4.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features =  ["blocking", "json"] }
