[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["optimism"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4"
flexi_logger = "0.28"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
axum = "0.4.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features =  ["blocking", "json"] }
thiserror = "1.0"
eyre = "0.6"
zstd = { git = "https://github.com/scroll-tech/zstd-rs", branch = "hack/mul-block", features = ["experimental"]}
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = "0.10.8"
uuid = { version = "1.3", features = ["v4"] }  
base64 = "0.22.1"
pem = "1.1.0"  
