[package]
name = "shadow-proving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features =  ["blocking", "json"] }
ethers = "2.0.6"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
flexi_logger = "0.28"
serde = "1.0"
serde_json = "1.0"
prometheus = { version = "0.9", features = ["process"] }
lazy_static = "1.4"
axum = "0.4.3"
tower-http = { version = "0.4", features = ["full"] }
hex = "0.4"
anyhow = "1.0.82"