[package]
name = "prover-primitives"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["consensus", "eips", "k256", "rlp", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
serde_json.workspace = true