[package]
name = "prover-primitives"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["serde", "k256"] }
alloy-rlp.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true

[dev-dependencies]
serde_json.workspace = true
