[package]
name = "prover-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rsp-mpt = { workspace = true }
revm = { workspace = true, features = [
    "serde",
    "bn",
], default-features = false }
tracing = { workspace = true, default-features = false }
anyhow = { workspace = true }
alloy-primitives = { workspace = true, features = [
    "sha3-keccak",
    "map-foldhash",
] }
prover-primitives = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
[lints]
workspace = true
