[package]
name = "prover-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
revm = { workspace = true, features = [
    "serde",
    "bn",
], default-features = false }
alloy-primitives = { workspace = true, features = [
    "sha3-keccak",
    "map-foldhash",
] }
prover-primitives = { workspace = true }
prover-mpt = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy-consensus = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport = { workspace = true }
thiserror = { workspace = true }
alloy-rpc-types = { workspace = true }
reth-trie = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-storage-errors = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
