[package]
name = "prover-utils"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
alloy-provider = { workspace = true }
alloy-network = { workspace = true }
alloy-json-rpc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
