[package]
name = "prover-executor-client"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"
version = "0.1.0"
edition = "2021"

[dependencies]
prover-primitives.workspace = true
prover-executor-core.workspace = true
kzg-rs = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
ruzstd = { workspace = true }
cfg-if = { workspace = true }
rsp-mpt = { workspace = true }
revm = { workspace = true }
thiserror = { workspace = true }
alloy-consensus.workspace = true
reth-trie.workspace = true
prover-storage.workspace = true
alloy-primitives = { workspace = true, features = [
    "sha3-keccak",
    "map-hashbrown",
    "rayon",
] }
alloy-rlp = { workspace = true }
revm-primitives = { workspace = true }
prover-utils.workspace = true
