[package]
name = "morph-executor-client"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"
version = "0.1.0"
edition = "2021"

[dependencies]
prover-utils.workspace = true
prover-primitives.workspace = true
morph-executor-core.workspace = true
alloy = { workspace = true, features = [
    "consensus",
    "eips",
    "k256",
    "rlp",
    "serde",
] }
kzg-rs = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
ruzstd = { workspace = true }
cfg-if = { workspace = true }
rsp-mpt = { workspace = true }
revm = { workspace = true }
thiserror = { workspace = true }
alloy-consensus.workspace = true
reth-execution-types.workspace = true
reth-trie.workspace = true
prover-storage.workspace = true
