[package]
name = "morph-executor-host"
homepage = "https://github.com/morph-l2/morph/tree/main/prover"
version = "0.1.0"
edition = "2021"

[dependencies]
zstd = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
prover-primitives = { workspace = true }
morph-executor-client = { workspace = true }
morph-executor-utils = { workspace = true }
alloy-consensus = { workspace = true }
c-kzg = { workspace = true }