[package]
name = "prover-storage-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
alloy-primitives = { workspace = true, features = [
    "sha3-keccak",
    "map-foldhash",
] }
prover-primitives = { workspace = true }
prover-mpt = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy-transport = { workspace = true }
alloy-provider = { workspace = true }
alloy-consensus = { workspace = true }
reth-storage-errors = { workspace = true }
async-trait = { workspace = true }
reth-trie = { workspace = true }
reth-primitives-traits = { workspace = true }
revm = { workspace = true, features = ["serde", "bn"] }

[dev-dependencies]
serde_json = { workspace = true }
