[package]
version = "0.1.0"
name = "bls12381-client"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true }

[dependencies.bls12_381]
git = "https://github.com/sp1-patches/bls12_381"
tag = "patch-0.8.0-sp1-6.2.0"
features = [
    "groups",
    "pairings",
    "alloc",
]
default-features = false
